# teach-me-everything

./: .gitignore  README.md  README.tr.md  THIRD-PARTY-LICENSES.md  next.config.test.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci-test.yml  release.yml
docs/: STATIC_EXPORT_WORKSPACE_ROUTING.md
messages/: en.json  tr.json
scripts/: fetch-piper.mjs  repro-allroutes.mjs  serve-out-repro.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: .gitignore  README.md
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: keychain.toml  sysinfo.toml  tts.toml
src-tauri/src/: keychain.rs  lib.rs  main.rs  sysinfo.rs  tts.rs
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/dashboard/: page.tsx
src/app/settings/: page.tsx
src/app/workspaces/: page.tsx
src/components/: SeedBootstrap.tsx
src/components/article-analysis/: AnalysisCard.tsx  AnalysisDetailView.tsx  AnalysisEmptyState.tsx  AnalysisGenerateModal.tsx
src/components/cards/: LeechBadge.tsx
src/components/flashcards/: FlashcardEditModal.tsx  FlashcardProposalModal.tsx  GenerateBatchModal.tsx
src/components/icons/: index.ts
src/components/markdown/: MarkdownPreview.tsx
src/components/mindmap/: ConceptInspector.tsx  MindMapCanvas.tsx
src/components/notebook/: ChatBubble.tsx  ChatThreadSidebar.tsx  CitationChip.test.ts  CitationChip.tsx  ContextBar.tsx  SourceScopePicker.tsx  WebCitationChip.tsx  WebCitationPeekModal.tsx  WorkspaceChatPanel.tsx
src/components/notes/: BacklinksPanel.tsx  DeleteFolderModal.tsx  DeleteNoteModal.tsx  EditorToolbar.tsx  EmbedAsSourceButton.tsx  (+7 more)
src/hooks/: useApiKeyManager.ts  useCurrentTime.ts  useProviderChatModels.ts  useSystemCheck.ts
src/i18n/: IntlProvider.tsx  messages.ts
src/lib/: setup-completion.ts
src/stores/: prefs-vault.test.ts  prefs.cost-migration.test.ts  prefs.daily-notes-migration.test.ts  prefs.research-migration.test.ts  prefs.ts  prefs.web-search-migration.test.ts  selection.ts  vault.ts
src/types/: mammoth-browser.d.ts  pdfjs-worker.d.ts
tests/e2e/: add-url.e2e.ts  diffbot-ingest.e2e.ts  find-sources-modal.e2e.ts  guided-study.e2e.ts  notebook-happy-path.e2e.ts  notes-as-source-create.e2e.ts  notes-as-source-sync.e2e.ts  notes-create.e2e.ts  notes-daily.e2e.ts  notes-wikilink.e2e.ts  podcast.e2e.ts  roadmap-render.e2e.ts  setup-wizard.e2e.ts  smoke.e2e.ts  web-search-chat.e2e.ts  workspace-chat.e2e.ts
(+551 files in other folders)
